
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;
typedef scalar_t__ uint16_t ;
typedef int u_int8_t ;
typedef void* u_int32_t ;
typedef scalar_t__ u_int16_t ;
struct iphdr {int ihl; int version; int tos; int ttl; int check; void* daddr; void* saddr; int protocol; void* frag_off; void* id; void* tot_len; } ;


 int IP4_HDRLEN ;
 void* htons (scalar_t__) ;
 int in_cksum (unsigned short*,int) ;

void ip_header(struct iphdr * ip ,u_int32_t src_addr,u_int32_t dst_addr,u_int16_t payload_len,
                         u_int8_t protocol,u_int16_t id,uint16_t frag_off){


  ip->ihl = IP4_HDRLEN / sizeof (uint32_t);
  ip->version = 4;
  ip->tos = 0x0;
  ip->tot_len = htons(IP4_HDRLEN + payload_len);
  ip->id = htons(id);
  ip->ttl = 64;
  ip->frag_off = htons(frag_off);
  ip->protocol = protocol;
  ip->saddr = src_addr;
  ip->daddr = dst_addr;
  ip->check = in_cksum((unsigned short *)ip,IP4_HDRLEN);
}
